// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote Block should render Default 1`] = `
<DocumentFragment>
  <blockquote
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-4"
      >
        This is a quote that is very long so that we can make sure that linebreaks correctly happen.
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 emotion-5"
      >
        John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithClassName 1`] = `
<DocumentFragment>
  <blockquote
    class="extra-classname emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-4"
      >
        This is a quote that is very long so that we can make sure that linebreaks correctly happen.
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 emotion-5"
      >
        John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithEmotion 1`] = `
<DocumentFragment>
  <blockquote
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-4"
      >
        This is a quote that is very long so that we can make sure that linebreaks correctly happen.
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 emotion-5"
      >
        John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithImage 1`] = `
<DocumentFragment>
  <blockquote
    class="emotion-0 emotion-1"
  >
    <img
      alt="DSC07717"
      class="emotion-2 emotion-3"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title=""
    />
    <div
      class="emotion-4 emotion-5"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-6"
      >
        This is a quote that is very long so that we can make sure that linebreaks correctly happen.
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 emotion-7"
      >
        John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;

exports[`Quote Block should render WithImageAndShortText 1`] = `
<DocumentFragment>
  <blockquote
    class="emotion-0 emotion-1"
  >
    <img
      alt="DSC07717"
      class="emotion-2 emotion-3"
      loading="lazy"
      sizes="(max-width: 400px) 200w,
(max-width: 600px) 300w,
(max-width: 1000px) 500w,
800w"
      srcset="https://unsplash.it/800/800 800w,
https://unsplash.it/500/500 500w,
https://unsplash.it/300/300 300w,
https://unsplash.it/200/200 200w"
      title=""
    />
    <div
      class="emotion-4 emotion-5"
    >
      <p
        class="MuiTypography-root MuiTypography-h4 emotion-6"
      >
        This is a quote.
      </p>
      <cite
        class="MuiTypography-root MuiTypography-body1 emotion-7"
      >
        John Doe
      </cite>
    </div>
  </blockquote>
</DocumentFragment>
`;
